# lejur-kernel

./: alembic.ini  main.py  pyproject.toml
alembic/: env.py
app/core/: config.py
lejur_kernel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
