[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lejur-kernel"
version = "0.1.0"
description = "lejur v1 kernel (FastAPI + Postgres)"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic",
  "pydantic>=2.7",
  "python-dotenv",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "pytest",
  "httpx",
]
